a/main.css
html { background: linear-gradient(rgba(20, 20, 20, .85), rgba(20, 20, 20, .85)), url('/a/background.png') no-repeat left center fixed }
body {
	font-family: helvetica, sans-serif;
	-webkit-text-size-adjust: none;
	word-wrap: break-word;
	tab-size: 4;
}
* {
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	-webkit-overflow-scrolling: touch;
}
*::-webkit-input-placeholder {
	color: #666;
	font-size: .9em;
}
@keyframes target { 
	0%, 30% {
		background: #f70;
	}
}
@-webkit-keyframes target { 
	0%, 30% {
		background: #f70;
	}
}
:not(.target):target {
	animation: target 1s;
	-webkit-animation: target 1s;
}
.blk { display: block }
[hidden], .target:not(:target) { display: none }
.ib, #logo { display: inline-block }
.rel, .comment { position: relative }
.abs, .ctrls { position: absolute }
.fullwidth { width: 100% }
.maxwidth, img { max-width: 100% }
.lft, .row > :not(.rit):not(.half):not(.program), .user > * { float: left }
.rit, .c-sig, .user, .ctrls, h1 small, h2 small { float: right }
.nofloat { float: none }
:not(h1):not(h2):not(h3):not(h4):not(h5):not(h6):not(article):not(small) > :first-child { margin-top: 0 }
.mar { margin: 6px }
.nomar, body, input { margin: 0 }
.tumar, h1 + *, h2:not(.title) + *, h3:not(.title) + *, form * { margin-top: 2px }
.sumar:not(:first-child), :not(img) + .desc, .blk { margin-top: 4px }
.umar:not(:first-child), :not(.row) > section:not(:first-child), article:not(:first-child), section:not(:first-child), form:not([action="/search/"]) { margin-top: 6px }
.bumar:not(:first-child), h1:not(:first-child) { margin-top: 8px }
.lmar, #content, p { margin-bottom: 6px }
.rmar { margin-right: 6px }
.bmar, .error, .half { margin-bottom: 6px }
.lmar { margin-left: 6px }
.pad, a.center-text.blk, .desc, #content, #footer, .error, .popup { padding: 4px }
.spad { padding: 3px }
.noborder, iframe { border: none }
.scrl { overflow: auto }
.scrlx { overflow-x: auto }
.scrly { overflow-y: auto }
.br, .desc { border-radius: 4px }
.hglt, .desc, .comment, section, article, blockquote { background: rgba(255, 255, 255, .4) }
.shglt, #content, #aside, #footer { background: rgba(255, 255, 255, .8) }
.white, iframe:not([seamless]) { background: #fff }
.mono, .ctrls { font-family: monospace }
.ctrls a { padding: 0 2px }
.grey, a.small, .c-sig, .ctrls a { color: #444 }
.red { color: #f00 }
.large { font-size: 1.2em }
.larger, .ctrls { font-size: 1.4em }
.ctrls {
	bottom: 100%; right: -1px;
	z-index: 1;
	background: #cef;
	line-height: 16px;
	padding-bottom: 1px;
}
.comment:first-child .ctrls { top: 100%; bottom: auto; }
.ctrls :hover { color: #000 }
.ctrls :first-child.clkd { text-shadow: 1px 1px 1px #000; color: #e80 }
.ctrls :nth-child(2):not(:last-child).clkd { color: #0e0 }
.ctrls :last-child { font-size: 1.1em }
input[type=text].large, input[type=password].large { font-size: 1.3em }
small, a.small, footer, .c-sig, .ctrls a {
	font-size: .85em;
	font-weight: normal;
}
h1 small, h2 small { font-size: .85rem }
h1 small { margin: .5em }
h2 small { margin: .2em .2em 0 0 }
.popup {
	position: absolute;
	top: 20%; right: 20%; left: 20%;
	background: rgba(240, 240, 240, .95);
	box-shadow: 1px 1px 8px #000;
}
.user {
	 background: #9ef;
	 color: #000;
	 min-width: 140px;
	 display: inline-block;
	 padding: 4px 8px 4px 4px;
	 margin-left: 8px;
	 text-align: left;
}
.user div {
	margin-left: 4px;
}
.user a { display: block }
.program {
	display: inline-block;
	max-width: 95%;
}
.program div {
	width: 600px;
	max-width: 100%;
	max-height: 400px;
	height: 28vw;
	min-height: 180px;
	overflow: auto;
}
.program iframe {
	width: 100%;
	height: calc(100% - 4px);
}
.program:nth-child(n+5) { display: none }
@media (min-width: 500px) {
	.program { max-width: 49% }
	.program:nth-child(-n+6) { display: inline-block }
}
@media (min-width: 900px) {
	.program { max-width: 33% }
	.program:nth-child(-n+9) { display: inline-block }
}
@media (min-width: 1300px) {
	.program { max-width: calc(25% - 4px) }
	.program div { height: 20vw }
	.program:nth-child(-n+12) { display: inline-block }
}
@media (min-width: 1700px) {
	.program { max-width: calc(20% - 4px) }
	.program div { height: 16vw }
	.program:nth-child(-n+15) { display: inline-block }
}
.comment {
	margin-top: 3px;
	padding: 4px;
}
.comment #up, .comment #dn { width: 18px }
.comment .hover {
	float: left;
	opacity: 0.3;
	padding: 2px 2px 0 0;
	height: 16px;
}
.comment .hover * { margin: 0 }
.comment:hover .hover { opacity: 1 }
.comment .rit {
	color: #666;
	font-size: 0.9em;
}
ul, ol, p { margin: 6px 0 2px 0 }
.error { background: #f00 }
.white, .error { color: #fff }
.center { margin: 0 auto }
.center-text, #footer, #nav { text-align: center }
.pre { white-space: pre-wrap }
.clear, .clearfix::after, .comment::after, nav::after, .row::after, .user::after {
	content: '';
	display: block;
	clear: both;
}
h1, h2, h3, h4, h5, h6 {
	margin-top: .2em; margin-bottom: .2em;
	font-family: Tahoma, Helvetica;
}
h1:not(.title), h2:not(.title), h3:not(.title), h4:not(.title), h5:not(.title), h6:not(.title) {
	font-weight: normal;
	font-family: Verdana;
}
h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { font-weight: inherit }
h1 {
	border-bottom: 1px solid #aaa;
	font-size: 1.5em;
	line-height: 1;
	padding-bottom: 1px;
	vertical-align: bottom;
}
h2, h1.title, article h1 {
	font-size: 1.3em;
}
h3, h2.title, article h2, article article h1 {
	margin-top: .5em;
	font-size: 1em;
}
hr { border-bottom: none }
a, .ctrl {
	color: #000;
	font-weight: bold;
	text-decoration: none;
	transition: color .2s;
	cursor: pointer;
}
a:hover, .ctrl:hover { color: #15f }
a:active, .ctrl:active { color: #02d }
a.blk:hover {
	color: #002;
	background: rgba(255, 255, 255, .2);
}
input[type=text], input[type=password], textarea {
	font-family: helvetica;
	font-size: .8em;
}
textarea {
	font-size: .9em;
	display: block;
}
#err > * {
	display: block;
	text-align: center;
	margin: 3em;
	color: #fff;
}
#nav {
	padding: 0 2px 6px 2px;
	font-size: 0;
	background: #000;
}
#nav * {
	padding: 0 4px;
	color: #ddd;
	font-weight: normal;
	font-size: .9rem;
	line-height: 1.5;
}
#logo {
	display: block;
	width: 180px;
	margin: 0 auto 4px;
	line-height: 0;
	max-width: 100%;
}
#nav form {
	max-width: calc(100% - 12px);
	margin: 0 3px;
	padding: 4px 0;
	line-height: 1;
	display: inline-block;
}
#nav input {
	width: 160px;
	max-width: 100%;
	color: #000;
}
#logo img {
	max-height: 100%;
	padding: 4px 6px;
}
#content { padding-bottom: 24px }
#nav > .active:nth-child(3) { position: relative }
@media (min-width: 380px) and (max-width: 799px) { 
	#nav > :not(.active) + nav + a:nth-child(5) { border-right: 1px solid #aaa }
}
@media (max-width: 799px) { 
	#nav nav > a.active { font-weight: bold }
	#nav :not(.active) + nav { display: none }
	#nav > .active:nth-child(3)::before {
		border-top: 1.5px solid #fff;
		border-left: 1.5px solid #fff;
	}
	#nav nav {
		background: #333;
		display: inline-block;
	}
}
@media (min-width: 140px) and (max-width: 240px) {
	#nav > .active + nav + :nth-child(5)::before, #nav > :not(.active) + nav + :nth-child(5)::after {
		white-space: pre;
		content: '\a';
	}
}
@media (min-width: 240px) and (max-width: 380px) {
	#nav > :nth-child(6)::before {
		white-space: pre;
		content: ' ';
	}
}
@media (min-width: 240px) and (max-width: 799px) {
	#nav a:not(#logo) {
		margin-top: 4px;
	}
	#nav nav {
		border-radius: 6px;
		margin-right: 4px;
	}
	#nav > .active:nth-child(3)::before { display: none }
	#nav > .active:nth-child(3) { padding-right: 14px }
	#nav > .active:nth-child(3)::after {
		content: ' ⟨';
		color: #ddd;
		position: absolute;
		left: 100%;
		margin-left: -9px;
		bottom: -2px;
		display: block;
		transform: scale(2.5, 1.3);
		-webkit-transform: scale(2.5, 1.3);
	}
}
@media (min-width: 280px) and (max-width: 379px) {
	#nav > .active + nav + :nth-child(5)::after {
		white-space: pre;
		content: '\a';
	}
}
@media (max-width: 610px), (min-width: 750px) { 
	#nav input { width: 184px }
}
@media (min-width: 700px) {
	.half {
		float: left;
		width: 49.5%;
	}
	.half.rit, .half:not(.rit) + .half:last-child { float: right }
}
@media (min-width: 380px) { 
	#nav {
		padding: 0;
		text-align: right;
	}
	#logo {
		float: left;
		width: 144px;
		margin: 0;
	}
	#nav nav { display: inline-block }
	line {
		display: inline-block;
		width: 1px; height: 1.2em;
		background: #888;
		vertical-align: sub;
	}
	#nav > .active:nth-child(3)::before {
		border-top: 2px solid #fff;
		border-left: 2px solid #fff;
	}
}
@media (min-width: 800px) {
	#nav {
		padding: 0;
		background: #111;
	}
	#nav > a { transition: background .15s }
	#nav a:hover {
		background: #262626;
		color: #fff;
	}
	#nav .active { color: #fff }
	#nav > a:active, #nav > a.active:not(:hover) { background: #000 }
	#nav nav > a {
		display: inline-block;
		line-height: 1.5;
	}
	#nav nav > a.active { background: #444 }
	#nav > *, #nav form {
		display: inline-block;
		padding: 0 12px;
		background: #1a1a1a;
		line-height: 2rem;
	}
	#logo {
		display: inline-block; position: relative;
		width: auto; height: 100%;
		margin: 0;
	}
	#logo:hover div { background: rgba(255, 255, 255, .3) }
	#logo:active div { background: rgba(0, 0, 0, .2) }
	#logo div {
		position: absolute;
		top: 0; left: 0; right: 0; bottom: 0;
		transition: background .1s;
		content: '';
	}
	#logo img { padding-bottom: 4px }
}
@media (min-width: 800px) and (max-width: 1499px) { 
	#cont { margin: 0 auto }
	#logo { height: 2rem }
	#nav > :nth-child(-n+5) { float: left }
	#nav > :nth-child(6) { border-left: 1px solid #444 }
	#nav > a:not(#logo) { border-right: 1px solid #444 }
	#nav nav {
		position: absolute;
		z-index: 1;
		top: 2rem;
		left: 14.8rem;
		border-top: 1px solid #888;
	}
	#nav :not(:hover) + nav:not(:hover) { display: none }
}
@media (min-width: 1500px) { 
	#cont { overflow: hidden }
	#cont::before { display: none }
	#content, #footer { margin: 6px 6px 6px calc(4% + 152px) }
	#nav {
		position: fixed;
		display: table;
		left: 0;
		width: calc(4% + 144px); height: 200px;
		text-align: left;
		background: #181818;
	}
	#nav > :nth-child(7) { margin-top: 16px }
	#nav > *, #nav form {
		width: 100%;
		padding-right: 24px;
	}
	#nav > :not(nav)::after {
		position: absolute;
		right: .5em;
		content: '\276F';
		color: #999;
	}
	#logo { height: 2rem }
	#nav input { width: 100% }
	#nav > .active:nth-child(3)::before {
		left: 32px;
		margin-top: -5px;
	}
	#nav > :not(#logo):not(nav):not(form) {
		position: relative;
		padding-left: 16px;
	}
	#nav nav {
		border-top: 1px solid #fff;
		border-bottom: 1px solid #fff;
		background: #000;
	}
	#nav nav::before {
		content: '＞';
		color: #999;
	}
	#nav :not(.active):not(:hover) + nav:not(:hover) { display: none }
	#nav > .active:nth-child(3)::before {
		border-top: 3px solid #fff;
		border-left: 3px solid #fff;
	}
}

